--- a/houseinrwanda_theme.info.yml
+++ b/houseinrwanda_theme.info.yml
@@ -10,6 +10,7 @@ libraries:
   - houseinrwanda_theme/moment
   - houseinrwanda_theme/moment-tz
   - houseinrwanda_theme/jQuery-countdown
+  - houseinrwanda_theme/jQuery-number
   - houseinrwanda_theme/global-styling
 libraries-override:
   bootstrap_barrio/global-styling: false
