--- a/houseinrwanda_theme.info.yml
+++ b/houseinrwanda_theme.info.yml
@@ -5,6 +5,7 @@ description: 'SASS starter kit for a Bootstrap Barrio SubTheme.'
 core: 8.x
 core_version_requirement: ^8 || ^9
 base theme: bootstrap_barrio
+screenshot: hir_screenshot.png
 
 libraries:
   - houseinrwanda_theme/moment
