--- a/houseinrwanda_theme.info.yml
+++ b/houseinrwanda_theme.info.yml
@@ -11,6 +11,7 @@ libraries:
   - houseinrwanda_theme/global-styling
 libraries-override:
   bootstrap_barrio/global-styling: false
+  bootstrap_sass/global-styling: false
 regions:
   top_header: 'Top header'
   top_header_form: 'Top header form'
